--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,6 +3,26 @@ body{
     margin: 0;
 }
 
+.btnWhatsapp{
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    right: 20px;
+    background-color: chartreuse;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 20px;
+    z-index: 100;
+}
+
+.btnWhatsapp:hover{
+    transform: translateX(-10px);
+    transform: translateY(-10px);
+    transition: ease 400ms;
+}
+
 #backgroundImage{
     background-image: url("../img/imagen2.jpg");
     background-position: center;
@@ -10,27 +30,37 @@ body{
     height: 100vh;
 }
 
-.filter{
+#filter{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .4);
 }
 
+#botones{
+    text-align: center;
+    padding-bottom: 40px;
+    
+}
+
 .button{
     width: 200px;
     border-radius: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-#boton1{
+#button1{
     background: none;
     color: white;
     border: solid white 1px;
 }
-#boton2{
+#button2{
     background: white;
     color: black;
     border: none;
 }
-.text{
+
+
+#text{
     text-align: center;
     padding-top: 15%;
     padding-bottom: 5%;
@@ -38,31 +68,128 @@ body{
     padding-right: 20%;
 }
 
-h1{  
+#titulo{  
     font-size: 40px !important;
     padding-bottom: 5%;
     color: white;
    
 }
 
-h2{
+#descripcionTitulo{
     font-size: 20px !important;
     color: lightgray;
     
-}
-
-#botones{
-    text-align: center;
-    padding-bottom: 40px;
-}
-
-button{
-    padding-top: 5px;
-    padding-bottom: 5px;
 }
 
 .nav-item{
     border-left: solid lightgray 1px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.beneficios{
+    color: black;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+.descripcionBeneficios{
+    color: gray;
+
+}
+
+
+.feature{
+    text-align: center;
+}
+
+.descripcionfeature {
+    text-align: center;
+    margin-left: 50px;
+    padding-right: 50px;
+}
+
+/* Inicia Slider    */
+.owl-carousel .item {
+    height: 10rem;
+    /* background: #c7c7c7; */
+    /* padding: 1rem; */
+}
+
+.owl-carousel .item h4 {
+    color: #FFF;
+    font-weight: 400;
+    margin-top: 0rem;
+}
+
+   /* Termina Slider */
+
+#contentbeneficios{
+    text-align: center;
+    padding-top: 80px;
+}
+
+#contentServicios{
+    padding-top: 80px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+#contentNosotros{
+    text-align: center;
+    padding-top: 80px;
+}
+
+#contentContactanos{
+    text-align: center;
+    padding-top: 80px; 
+}
+
+#contentTextNosotros{
+    border: solid rgb(227, 227, 227) 3px;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+#textFrase{
+    color: rgb(186, 186, 186);
+}
+
+#imgNosotros{
+    border-radius: 10px;
+}
+
+#contentFrase{
+    background-image: url("/img/fondo-frase.jpg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    margin-top: 2%;
+}
+   
+#fondoFrase{
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .4);
+
+}
+
+#contentTextoFrase{
+    color: white;
+    text-align: center;
+    padding: 3% 30% 3% 30%
+}
+   
+
+
+#contentFooter{
+    text-align: center;
+    padding-top: 30px;
+    background-color: rgb(137, 137, 137);
+    color: lightgray;
+}
+
+.textFooter a{
+    text-decoration: none;
+    color: lightgray;
 }
